# message-format

./: .gitignore  .gitlab-ci.yml  .project  CHANGELOG.md  LICENSE  README.md  build.gradle  changelog-diff-0.10.0.md  changelog-diff-0.11.0.md  changelog-diff-0.12.0.md  changelog-diff-0.20.0.md  changelog-diff-0.20.1.md  changelog-diff-0.21.0.md  settings.gradle
core/: core.gradle
docs/: .pages  antora.yml  index.md  license.md  mkdocs.yml  philosophy.md
documentation/: documentation.gradle
formatters-jdk8/: formatters-jdk8.gradle
gradle/: changelog.gradle  java-library.gradle  java.gradle  javadoc.gradle  libs.versions.toml  module.gradle  publish.gradle  publishing.gradle  quality.gradle  repositories.gradle  versions.gradle
gradle-plugin/: gradle-plugin.gradle
message-format/: message-format.gradle
message-format-annotations/: message-format-annotations.gradle
message-format-asm/: message-format-asm.gradle
message-format-cpscan/: message-format-cpscan.gradle
message-format-java7/: message-format-java7.gradle
message-format-java8/: message-format-java8.gradle
message-format-jodatime/: message-format-jodatime.gradle
message-format-jsr354/: message-format-jsr354.gradle
message-format-log4j/: message-format-log4j.gradle
message-format-spring/: message-format-spring.gradle
support/: message-format.js  (+1 more)
syntax/pygments/: PROMPT.md  README.md  STATE_MACHINE.md  __init__.py  message_format.py  messageformat_lexer.py  pyproject.toml  tokens.md
syntax/pygments/test/: Dockerfile  __init__.py  run_tests.sh  test_messageformat_lexer.py
(+1196 files in other folders)
