[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "messageformat-pygments-lexer"
version = "1.0.0"
description = "Pygments lexer for MessageFormat syntax"
authors = [{name = "Jeroen Gremmen"}]
requires-python = ">=3.7"
dependencies = [
    "pygments>=2.10",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Text Processing",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.entry-points."pygments.lexers"]
msgfmt = "message_format:MessageFormatLexer"
message-format = "message_format:MessageFormatLexer"

[tool.setuptools]
py-modules = ["message_format"]
